--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,49 +1,55 @@
-
-name: Mac OS Build
+name: Android Build
 on:
-  # push:
+  push:
   workflow_dispatch:
 jobs:
   build:
-    name: Mac OS Build
+    name: Android Build
     permissions: write-all
-    runs-on: macos-13
+    runs-on: ubuntu-latest
     steps:
       - name: Pulling the new commit
         uses: actions/checkout@v2
-      - name: Setting up Haxe
+      - name: Setup Haxe
         uses: krdlab/setup-haxe@v1
         with:
           haxe-version: 4.2.5
+      - name: Setup Android NDK
+        shell: bash
+        run: |
+          cd ${{ runner.temp }}
+          echo "Downloading Android NDK r28..."
+          curl -sSfL -o android-ndk.tar.xz "https://github.com/MobilePorting/android-ndk-cosmo/releases/download/r28/android-ndk-r28-unix.tar.xz"
+          echo "Extracting Android NDK r28..."
+          tar -xf android-ndk.tar.xz
+          echo "NDK r28 successfully downloaded and extracted!"
       - name: Restore existing build cache for faster compilation
         uses: actions/cache@v3
         with:
           # not caching the bin folder to prevent asset duplication and stuff like that
-          key: cache-build-mac
+          key: cache-build-android
           path: |
             .haxelib/
-            export/release/macos/haxe/
-            export/release/macos/obj/
+            export/release/android/haxe/
+            export/release/android/obj/
           restore-keys: |
-            cache-build-mac
+            cache-build-android
       - name: Installing/Updating libraries
         run: |
-          haxe -cp commandline -D analyzer-optimize --run Main setup -s
-      - name: Building the game
+          haxe -cp commandline -D analyzer-optimize --run Main setup -s --lib=./libs.mobile.xml
+      - name: Configuring Android
         run: |
-          haxelib run lime build mac
-      - name: Tar files
-        run: tar -zcvf CodenameEngine.tar.gz -C export/release/macos/bin .
-      - name: Uploading artifact (entire build)
+          haxelib run lime config ANDROID_SDK $ANDROID_HOME
+          haxelib run lime config ANDROID_NDK_ROOT ${{ runner.temp }}/android-ndk-r28
+          haxelib run lime config JAVA_HOME $JAVA_HOME_17_X64
+          haxelib run lime config ANDROID_SETUP true
+      - name: Building the game
+        run: haxelib run lime build android
+      - name: Uploading artifact
         uses: actions/upload-artifact@v4
         with:
           name: Codename Engine
-          path: CodenameEngine.tar.gz
-      # - name: Uploading artifact (executable)
-      #   uses: actions/upload-artifact@v4
-      #   with:
-      #     name: Update-Mac
-      #     path: export/release/macos/bin/CodenameEngine
+          path: export/release/android/bin/app/build/outputs/apk/release/*.apk
       - name: Clearing already existing cache
         uses: actions/github-script@v6
         with:
@@ -53,7 +59,7 @@ jobs:
               repo: context.repo.repo,
             })
             for (const cache of caches.data.actions_caches) {
-              if (cache.key == "cache-build-mac") {
+              if (cache.key == "cache-build-android") {
                 console.log('Clearing ' + cache.key + '...')
                 await github.rest.actions.deleteActionsCacheById({
                   owner: context.repo.owner,
@@ -67,10 +73,10 @@ jobs:
         uses: actions/cache@v3
         with:
           # caching again since for some reason it doesnt work with the first post cache shit
-          key: cache-build-mac
+          key: cache-build-android
           path: |
             .haxelib/
-            export/release/macos/haxe/
-            export/release/macos/obj/
+            export/release/android/haxe/
+            export/release/android/obj/
           restore-keys: |
-            cache-build-mac
+            cache-build-android
