--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -49,7 +49,7 @@ jobs:
       - name: Uploading artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Codename Engine
+          name: Codename Engine Android
           path: export/release/android/bin/app/build/outputs/apk/release/*.apk
       - name: Clearing already existing cache
         uses: actions/github-script@v6
