--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -58,7 +58,7 @@ jobs:
       - name: Uploading artifact
         uses: actions/upload-artifact@v4
         with:
-          name: Codename Engine
+          name: Codename Engine IOS
           path: export/release/ios/build/Release-iphoneos/*.ipa
       - name: Uploading new cache
         uses: actions/cache@v3
